@@ -7,7 +7,7 @@
    <parent>
       <groupId>org.alfresco</groupId>
       <artifactId>alfresco-community-repo-amps</artifactId>
-      <version>17.43-SNAPSHOT</version>
+      <version>20.5-SNAPSHOT</version>
    </parent>
 
    <modules>
@@ -30,16 +30,20 @@
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
+                  <!-- Keeping illegal-access=permit for Java 11 compatibility, even though it has no effect on JDK 17 -->
                   <argLine>
                      --illegal-access=permit
+                     --add-opens=java.base/java.lang=ALL-UNNAMED
                   </argLine>
                </configuration>
             </plugin>
             <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
+               <!-- Keeping illegal-access=permit for Java 11 compatibility, even though it has no effect on JDK 17 -->
                <configuration>
                   <argLine>
                      --illegal-access=permit
+                     --add-opens=java.base/java.lang=ALL-UNNAMED
                   </argLine>
                </configuration>
             </plugin>
